# charm4py

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.md  CHANGES.rst  LICENSE  MANIFEST.in  NOTICE  README.rst  auto_test.py  pyproject.toml  requirements.txt  setup.py  task-bench-test.py  test_config.json
.tmp/: README.md  compare_pingpong.py  compare_task_bench.py
charm4py/: __init__.py  c_object_store.cpp  c_object_store.html  c_object_store.pxd  c_object_store.pyx  channel.py  chare.py  charm.py  entry_method.py  interactive.py  libcharm_version  liveviz.py  object_store.py  pool.py  reduction.py  sections.py  threads.py  wait.py
charm4py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
charmpy/: TODO.txt  __init__.py  chare.py  charm.py  charmlib_cffi.py  charmlib_cffi_build.py  charmlib_ctypes.py  charmlib_cython.pxd  charmlib_cython.pyx  charmpy.cfg  charmpy.py  ckreduction.py  ckthread.py  entry_method.py  entrymethod.py  interactive.py  libcharm_version  reduction.py  threaded.py  threads.py  wait.py
charmrun/: start.py
docs/: Makefile  array-api.rst  benchmarks.rst  channels.rst  chare-api.rst  charm-api.rst  collections-api.rst  conf.py  contact.rst  core-api.rst  examples.rst  features.rst  futures-api.rst  gpus.rst  group-api.rst  index.rst  install.rst  introduction.rst  liveviz.rst  make.bat  options-api.rst  overview.rst  perf-tips.rst  performance.rst  pool.rst  profiling.rst  proxy-api.rst  readonlies-api.rst  reducer-api.rst  reductions-api.rst  release-notes.rst  requirements.txt  rules.rst  (+5 more)
(+202 files in other folders)
